--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.10.1",
+    "react-router-dom": "^7.11.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
